<resources>
    <string name="app_name">Movie List</string>
    <string name="api_error">API call failed</string>
    <string name="activity_text_trans">Activity text transition</string>
    <string name="activity_mixed_trans">Activity mixed transition</string>
    <string name="details">R | 3 hours, 2 minutes | 30 Dec, 2015</string>
    <string name="crime">Crime</string>
    <string name="mystery">Mystery</string>
    <string name="drama">Drama</string>
    <string name="synopsis">Synopsis</string>
    <string name="booknow">Book Now</string>
    <string name="reviews">Reviews</string>
    <string formatted="false" name="reviews_count">Reviews : %d</string>
    <string name="coming_soon">Coming Soon</string>
</resources>