<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bgColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBackground"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_movie"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <TextView
        android:id="@+id/txtDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/details"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtMovieType"
        style="@style/backgroundStyle"
        android:text="@string/crime"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtDuration" />

    <TextView
        android:id="@+id/txtMovieThriller"
        style="@style/backgroundStyle"
        android:text="@string/mystery"
        app:layout_constraintLeft_toRightOf="@+id/txtMovieType"
        app:layout_constraintTop_toBottomOf="@+id/txtDuration" />

    <TextView
        android:id="@+id/txtDrama"
        style="@style/backgroundStyle"
        android:text="@string/drama"
        app:layout_constraintLeft_toRightOf="@+id/txtMovieThriller"
        app:layout_constraintTop_toBottomOf="@+id/txtDuration" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:numStars="10"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/txtRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp_6"
        android:text="4.5"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toRightOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />
    <TextView
        android:id="@+id/txtReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/reviews"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBookNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_6"
        android:paddingRight="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_6"
        android:text="@string/booknow"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_16"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBookNow" />

    <TextView
        android:id="@+id/txtSynopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/synopsis"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnBookNow" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        android:hint="@string/synopsis"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@+id/txtSynopsis"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.41" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBookNow"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBackground"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".333" />


</androidx.constraintlayout.widget.ConstraintLayout>